[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-actions-demo"
version = "0.1.0"
description = "A demo project for GitHub Actions"
readme = "README.md"
authors = [
    {name = "Demo User", email = "demo@example.com"}
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest]
testpaths = ["test_*.py"]
